# olx_for_free_parser

./: Makefile  README.md  pyproject.toml  run.py
bot/: __init__.py  handlers.py  helper.py  main.py  olx.py  settings.py
core/: abstract.py  admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_stopword_word.py  0003_telgramuser.py  0004_rename_telgramuser_telegramuser.py  0005_stopword_create_at_stopword_update_at_advert.py
core/templates/: index.html
parser/: settings.py  urls.py
